Hash Generation feature added (#159)
Before the "Congratulations" page, there is now a "Submit" page that generates a hash that can be submitted.

As per the discussion in #159, I modified the encoder_ui to require students to enter a name and ID. This name and ID are then encoded in the hash (as an "identifier" type), so that submitted names and IDs could theoretically be used to track tutorial completion.

--- a/04-foundations/01-lesson/04-01-lesson.Rmd
+++ b/04-foundations/01-lesson/04-01-lesson.Rmd
@@ -1196,6 +1196,8 @@ Note that the `NHANES` data is thought to be a good representative sample of the
 
 OK, now that we've covered the basics, let's move on to completing a full hypothesis test on actual data.
     
+## Submit```{r encoder_ui, echo=FALSE}hash_encoder_ui = {    shiny::div("If you have completed this tutorial and are happy with all of your",         "solutions, please enter your identifying information, then click the button below to generate your hash",          textInput("name", "What's your name?"),        textInput("studentID", "What is your student ID?"),        renderText({ input$caption }),         )}``````{r encoder_logic, echo=FALSE, context="server"}is_server_context = function(.envir) {  # We are in the server context if there are the follow:  # * input - input reactive values  # * output - shiny output  # * session - shiny session  #  # Check context by examining the class of each of these.  # If any is missing then it will be a NULL which will fail.  inherits(.envir$input,   "reactivevalues") &  inherits(.envir$output,  "shinyoutput")    &  inherits(.envir$session, "ShinySession")}check_server_context = function(.envir) {  if (!is_server_context(.envir)) {    calling_func = deparse(sys.calls()[[sys.nframe()-1]])    err = paste0(      "Function `", calling_func,"`",      " must be called from an Rmd chunk where `context = \"server\"`"    )    stop(err, call. = FALSE)  }}encoder_logic = function(strip_output = FALSE) {  p = parent.frame()  check_server_context(p)  # Make this var available within the local context below  assign("strip_output", strip_output, envir = p)  # Evaluate in parent frame to get input, output, and session  local({    encoded_txt = shiny::eventReactive(      input$hash_generate,      {        # shiny::getDefaultReactiveDomain()$userData$tutorial_state        state = learnr:::get_tutorial_state()        shiny::validate(shiny::need(length(state) > 0, "No progress yet."))        shiny::validate(shiny::need(nchar(input$name) > 0, "No name entered."))        shiny::validate(shiny::need(nchar(input$studentID) > 0, "Please enter your student ID"))        user_state = purrr::map_dfr(state, identity, .id = "label")        user_state = dplyr::group_by(user_state, label, type, correct)        user_state = dplyr::summarize(          user_state,          answer = list(answer),          timestamp = dplyr::first(timestamp),          .groups = "drop"        )        user_state = dplyr::relocate(user_state, correct, .before = timestamp)        user_info = tibble(label = c("student_name", "student_id"), type="identifier", answer= as.list(c(input$name, input$studentID)), timestamp=format(Sys.time(), "%Y-%m-%d %H:%M:%S %Z", tz="UTC"))                  learnrhash::encode_obj(bind_rows(user_info, user_state))      }    )    output$hash_output = shiny::renderText(encoded_txt())  }, envir = p)}encoder_logic()``````{r encode, echo=FALSE}learnrhash::encoder_ui(ui_before = hash_encoder_ui)```
+
 ## Congratulations!
 
 You have successfully completed Lesson 1 in Tutorial 4: Foundations of inference.  
